--- a/views/board/view.pug
+++ b/views/board/view.pug
@@ -8,6 +8,24 @@ block content
             margin: 1rem;
         }
 
+    div#new-inventory-modal(data-bs-backdrop='static' data-bs-keyboard='false' tabindex='-1' aria-labelledby='staticBackdropLabel' aria-hidden='true', class="modal fade")
+        div(class="modal-dialog modal-dialog-centered modal-dialog-scrollable")
+            div(class="modal-content")
+                form#mew-inventory-form(onsubmit="return false")
+                    fieldset
+                        div(class="modal-header")
+                            h5#new-inventory-modal-Label.modal-title New Inventory
+                        div(class="modal-body")
+                            div
+                                div(class="form-floating")
+                                    input#new-inventory-for-user(type="text", name="name", placeholder="For", class="form-control")
+                                    label(for="new-inventory-for-user") User
+                        div(class="modal-footer")
+                            div.new-item-form-buttons
+                                input(type="submit", data-bs-dismiss='modal', value="Save" class="btn btn-success", onclick="submit_inventory()")
+                                input(type="reset", data-bs-dismiss='modal', value="Cancel", class="btn btn-secondary")
+
+
     div#new-item-modal(data-bs-backdrop='static' data-bs-keyboard='false' tabindex='-1' aria-labelledby='staticBackdropLabel' aria-hidden='true', class="modal fade")
         div(class="modal-dialog modal-dialog-centered modal-dialog-scrollable")
             div(class="modal-content")
@@ -37,22 +55,6 @@ block content
                                 input(type="submit", data-bs-dismiss='modal', value="Save" class="btn btn-success", onclick="submit_item()")
                                 input(type="reset", data-bs-dismiss='modal', value="Cancel", class="btn btn-secondary")
 
-    div#new-inventory-modal(data-bs-backdrop='static' data-bs-keyboard='false' tabindex='-1' aria-labelledby='staticBackdropLabel' aria-hidden='true', class="modal fade")
-        div(class="modal-dialog modal-dialog-centered modal-dialog-scrollable")
-            div(class="modal-content")
-                form#mew-inventory-form(onsubmit="return false")
-                    fieldset
-                        div(class="modal-header")
-                            h5#new-inventory-modal-Label.modal-title New Item
-                        div(class="modal-body")
-                            div
-                                div(class="form-floating")
-                                    input#new-inventory-for-user(type="text", name="name", placeholder="For", class="form-control")
-                                    label(for="new-inventory-for-user") For User
-                        div(class="modal-footer")
-                            div.new-item-form-buttons
-                                input(type="submit", data-bs-dismiss='modal', value="Save" class="btn btn-success", onclick="submit_inventory()")
-                                input(type="reset", data-bs-dismiss='modal', value="Cancel", class="btn btn-secondary")
 
     div.main
         //- User List
@@ -62,7 +64,7 @@ block content
                 button(type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#new-inventory-modal")
                     | +
 
-    div#players-list
+            div#players-list
 
         //- Inventory
         div.inventory
