--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,6 +13,10 @@ html
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
 
   body
+    nav(class="navbar navbar-dark bg-primary")
+      span(class="navbar-brand h1", style="margin-left: 1rem") Inventory Manager
+
+
     block content
 
     // bootstrap
