money addition and deletion functional

--- a/views/board/view.pug
+++ b/views/board/view.pug
@@ -72,8 +72,8 @@ block content
                         span(class="input-group-text") €
                     div(class="input-group")
                         input#money-in(type="number", class="form-control")
-                        button#add_money_btn(class="btn btn-outline-secondary", style="width:2rem", onclick="add_money()") +
-                        button#sub_money_btn(class="btn btn-outline-secondary", style="width:2rem", onclick="add_money(true)") -
+                        button#add_money_btn(class="btn btn-outline-secondary", style="width:2rem", onclick="submit_money()") +
+                        button#sub_money_btn(class="btn btn-outline-secondary", style="width:2rem", onclick="submit_money(true)") -
 
             //- Items
             article.items
