--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,8 @@ html
 
   body
     nav(class="navbar navbar-dark bg-primary")
-      span(class="navbar-brand h1", style="margin-left: 1rem") Inventory Manager
+      a(href="/board", style="margin-left: 1rem", class="navbar-brand h1")
+        span Inventory Manager
 
 
     block content
