--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,69 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    style.
+        .sign-container {
+            max-width: 60rem;
+            margin: 1rem auto;
+            height: 80vh;
+
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+        .sign {
+            width: 20rem;
+            max-width: 20rem;
+            margin: 1rem;
+
+            display: flex;
+            flex-direction: column;
+        }
+        .sign h3 {
+            margin-bottom: 1.5rem;
+        }
+
+    div.sign-container(class="conatiner")
+        div.sign.sign-in
+            h3 Sign In
+            form(method="POST", action="/auth/sign_in")
+                div(class="mb-3")
+                    label(for="InputUsername1" class="form-label") Username
+                    input(type="text" class="form-control" id="InputUsername1", name="name")
+                    //-div(id="emailHelp" class="form-text") We'll never share your email with anyone else.
+                //div(class="mb-3")
+                //    label(for="InputEmail1" class="form-label") Email address
+                //    input(type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp")
+                //    //-div(id="emailHelp" class="form-text") We'll never share your email with anyone else.
+                div(class="mb-3")
+                    label(for="InputPassword1" class="form-label") Password
+                    input(type="password" class="form-control" id="InputPassword1", name="password")
+                //div(class="mb-3 form-check")
+                //    input(type="checkbox" class="form-check-input" id="exampleCheck1")
+                //    label(class="form-check-label" for="exampleCheck1") Check me out
+                button(type="submit" class="btn btn-primary") Submit
+
+        //div(class="vr")
+        //div.sign.sign-up
+        //    h3 Sign Up
+        //    form
+        //        div(class="mb-3")
+        //            label(for="InputUsername" class="form-label") Username
+        //            input(type="text" class="form-control" id="InputUsername")
+        //        div(class="mb-3")
+        //            label(for="InputEmail" class="form-label") Email address
+        //            input(type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp")
+        //            div(id="emailHelp" class="form-text") We'll never share your email with anyone else.
+        //        div(class="mb-3")
+        //            div
+        //                label(for="InputPassword1" class="form-label") Confirm Password
+        //                input(type="password" class="form-control" id="InputPassword1")
+        //            div
+        //                label(for="InputPassword2" class="form-label") Password
+        //                input(type="password" class="form-control" id="InputPassword2")
+        //        //div(class="mb-3 form-check")
+        //        //    input(type="checkbox" class="form-check-input" id="exampleCheck1")
+        //        //    label(class="form-check-label" for="exampleCheck1") Check me out
+        //        button(type="submit" class="btn btn-primary") Submit
