wip: sign in and up

--- a/views/board/index.pug
+++ b/views/board/index.pug
@@ -33,7 +33,7 @@ block content
                                     label(for="new-name") Name
                         div(class="modal-footer")
                             div.new-item-form-buttons
-                                input(type="submit", data-bs-dismiss='modal', value="Save" class="btn btn-success", onclick="submit_item()")
+                                input(type="submit", data-bs-dismiss='modal', value="Save" class="btn btn-success", onclick="submit_project()")
                                 input(type="reset", data-bs-dismiss='modal', value="Cancel", class="btn btn-secondary")
     template#project-template
         div(class="list-group-item list-group-item-action list-group-item-light")
