--- a/views/index.pug
+++ b/views/index.pug
@@ -30,40 +30,40 @@ block content
             h3 Sign In
             form(method="POST", action="/auth/sign_in")
                 div(class="mb-3")
-                    label(for="InputUsername1" class="form-label") Username
-                    input(type="text" class="form-control" id="InputUsername1", name="name")
+                    label(for="sign-in_username" class="form-label") Username
+                    input(type="text" class="form-control" id="sign-in_username", name="name")
                     //-div(id="emailHelp" class="form-text") We'll never share your email with anyone else.
                 //div(class="mb-3")
                 //    label(for="InputEmail1" class="form-label") Email address
                 //    input(type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp")
                 //    //-div(id="emailHelp" class="form-text") We'll never share your email with anyone else.
                 div(class="mb-3")
-                    label(for="InputPassword1" class="form-label") Password
-                    input(type="password" class="form-control" id="InputPassword1", name="password")
+                    label(for="sign-in_password" class="form-label") Password
+                    input(type="password" class="form-control" id="sign-in_password", name="password")
                 //div(class="mb-3 form-check")
                 //    input(type="checkbox" class="form-check-input" id="exampleCheck1")
                 //    label(class="form-check-label" for="exampleCheck1") Check me out
                 button(type="submit" class="btn btn-primary") Submit
 
-        //div(class="vr")
-        //div.sign.sign-up
-        //    h3 Sign Up
-        //    form
-        //        div(class="mb-3")
-        //            label(for="InputUsername" class="form-label") Username
-        //            input(type="text" class="form-control" id="InputUsername")
-        //        div(class="mb-3")
-        //            label(for="InputEmail" class="form-label") Email address
-        //            input(type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp")
-        //            div(id="emailHelp" class="form-text") We'll never share your email with anyone else.
-        //        div(class="mb-3")
-        //            div
-        //                label(for="InputPassword1" class="form-label") Confirm Password
-        //                input(type="password" class="form-control" id="InputPassword1")
-        //            div
-        //                label(for="InputPassword2" class="form-label") Password
-        //                input(type="password" class="form-control" id="InputPassword2")
-        //        //div(class="mb-3 form-check")
-        //        //    input(type="checkbox" class="form-check-input" id="exampleCheck1")
-        //        //    label(class="form-check-label" for="exampleCheck1") Check me out
-        //        button(type="submit" class="btn btn-primary") Submit
+        div(class="vr")
+        div.sign.sign-up
+            h3 Sign Up
+            form(method="POST", action="/api/user")
+                div(class="mb-3")
+                    label(for="sign-up_username" class="form-label") Username
+                    input(type="text" class="form-control" id="sign-up_username", name="name")
+                div(class="mb-3")
+                    label(for="sign-up_mail" class="form-label") Email address
+                    input(type="email" class="form-control" id="sign-up_mail" aria-describedby="emailHelp", name="mail")
+                    div(id="emailHelp" class="form-text") We'll never share your email with anyone else.
+                div(class="mb-3")
+                    //-div
+                    label(for="sign-up_password" class="form-label") Password
+                    input(type="password" class="form-control" id="sign-up_password", name="password")
+                    //-div
+                    //-    label(for="sign-up_password_confirm" class="form-label") Confirm Password
+                    //-    input(type="password" class="form-control" id="sign-up_password_confirm")
+                //-div(class="mb-3 form-check")
+                //-    input(type="checkbox" class="form-check-input" id="exampleCheck1")
+                //-    label(class="form-check-label" for="exampleCheck1") Check me out
+                button(type="submit" class="btn btn-primary") Submit
