--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,7 @@ html
 
     // material icons
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+    link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200")
 
   body
     nav(class="navbar navbar-dark bg-primary")
