--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,8 +15,11 @@ html
 
   body
     nav(class="navbar navbar-dark bg-primary")
-      a(href="/board", style="margin-left: 1rem", class="navbar-brand h1")
-        span Inventory Manager
+      div
+        a(href="/board", style="margin-left: 1rem", class="navbar-brand h1")
+          span Inventory Manager
+      div(class="me-2")
+        button(type="button", class="btn btn-outline-light", onclick="logout();") Sign Out
 
 
     block content
@@ -24,3 +27,5 @@ html
     // bootstrap
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js", integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk", crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js", integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy", crossorigin="anonymous")
+
+    script(src="/javascripts/layout.js")
