wip: gamemaster mode

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html
         a(href="/board", style="margin-left: 1rem", class="navbar-brand h1")
           span Inventory Manager
       div(class="me-2")
-        button(type="button", class="btn btn-outline-light", onclick="logout();") Sign Out
+        button(type="button", class="btn btn-outline-light", onclick="sign_out();") Sign Out
 
 
     block content
