--- a/views/board/view.pug
+++ b/views/board/view.pug
@@ -56,7 +56,7 @@ block content
             div
                 header
                     h5.heading Inventories
-                    button(type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#new-inventory-modal")
+                    button.manage(type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#new-inventory-modal")
                         | +
                 div#inventories-list.inventory-container(class="list-group")
             div
@@ -77,7 +77,7 @@ block content
                     div(class="input-group")
                         input#money-out(type="number", class="form-control disabled", disabled)
                         span(class="input-group-text") €
-                    div(class="input-group")
+                    div.manage(class="input-group")
                         input#money-in(type="number", class="form-control")
                         button#add_money_btn(class="btn btn-outline-secondary", style="width:2rem", onclick="submit_money()") +
                         button#sub_money_btn(class="btn btn-outline-secondary", style="width:2rem", onclick="submit_money(true)") -
@@ -86,7 +86,7 @@ block content
             article.items
                 header
                     h3 Items
-                    button(type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#new-item-modal")
+                    button.manage(type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#new-item-modal")
                         | +
 
                 div#items-list(class="accordion")
@@ -113,14 +113,14 @@ block content
                     label(class="fw-lighter") Notes
                     p.item-notes
 
-                    button.item-delete(class="delete btn btn-outline-dark", onclick="delete_item(Number(this.getAttribute('itemid')));", itemid="")
+                    button.item-delete.manage(class="delete btn btn-outline-dark", onclick="delete_item(Number(this.getAttribute('itemid')));", itemid="")
                         span(class="material-icons") delete
 
     template#inventory-template
         div.users-list(class="list-group-item list-group-item-action list-group-item-light")
             div(class="input-group")
                 input.inventory-name(type="text", class="form-control" disabled="true")
-                div.inventory-remove-button(class="btn btn-outline-danger", onclick="delete_inventory(this.getAttribute('inventoryid'))", inventoryid="")
+                div.inventory-remove-button.manage(class="btn btn-outline-danger", onclick="delete_inventory(this.getAttribute('inventoryid'))", inventoryid="")
                     span(class="material-icons") cancel
                 div.inventory-view-button(class="btn btn-outline-primary", onclick="change_inventory(this.getAttribute('inventoryid'))", inventoryid="")
                     span(class="material-icons") visibility
